Closed Bug 983066 Opened 12 years ago Closed 12 years ago

assertion failure: Samples missing: 'startTicks == TimeToTicksRoundUp(inputTrackRate, outputStart)' in AudioNodeExternalInputStream.cpp

Categories

(Core :: Web Audio, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

STR 1. Load attachment 831234 [details] ###!!! ASSERTION: Samples missing: 'startTicks == TimeToTicksRoundUp(inputTrackRate, outputStart)', file /home/karl/moz/dev/content/media/AudioNodeExternalInputStream.cpp, line 379 This is from adding more null samples than expected when the track has ended and inputStartTicks > inputTrackEndPoint at http://hg.mozilla.org/mozilla-central/annotate/c12c92db5588/content/media/AudioNodeExternalInputStream.cpp#l415
Blocks: 937962
Attachment #8390983 - Flags: review?(paul) → review+
Blocks: 942367
What's the status of this bug.
Hi Karl, To Martin's question in Comment 2, are you ready to land now that you have your r+ from Paul? Thanks.
Flags: needinfo?(karlt)
Please feel free to land this if it is blocking anything. I was delaying landing this, waiting for bug 818822, because the old code may have unintentionally made bug 983062 slightly less significant sometimes. But I expect the effects of bug 983062 would usually not be noticeable, due to being at the end of the audio, which usually fades out.
Flags: needinfo?(karlt)
Flags: in-testsuite+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: